namespace Verwaltungssystem;

public enum Tag
{
    Rosa,
    Grün,
    Gelb,
    Blau
}